# Irys-forum

./: .env  Cargo.toml  README.md  env.example  hardhat.config.js  package.json
contracts/: IrysForum.sol
scripts/: init_db.sql
src/: async_queue.rs  blockchain.rs  cache.rs  database.rs  handlers.rs  main.rs  models.rs  services.rs  utils.rs
static/: app.js  ethers-check.js  index.html  particles.js  styles.css
