[package]
name = "irys-forum"
version = "0.1.0"
edition = "2021"

[dependencies]

actix-web = "4.4"
actix-files = "0.6"
actix-cors = "0.6"
actix-multipart = "0.6"


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"


tokio = { version = "1.0", features = ["full"] }


reqwest = { version = "0.11", features = ["json"] }
bytes = "1.0"


chrono = { version = "0.4", features = ["serde"] }


env_logger = "0.10"
log = "0.4"


dotenv = "0.15"


sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
redis = { version = "0.23", features = ["tokio-comp"] }


sha2 = "0.10"
hex = "0.4"


rand = "0.8"


serde_urlencoded = "0.7"


md5 = "0.7"

# Ethers-rs for blockchain interaction
ethers = { version = "2.0", features = ["abigen", "rustls"] }
ethers-core = "2.0"


uuid = { version = "1.0", features = ["v4", "serde"] }


futures = "0.3"


dashmap = "5.5"  
parking_lot = "0.12"  
metrics = "0.21" 
metrics-exporter-prometheus = "0.12"  
num_cpus = "1.0"  

[dev-dependencies]
tokio-test = "0.4"

[[bin]]
name = "generate-secret"
path = "src/bin/generate_secret.rs" 